<resources>
    <string name="app_name">Cook Book</string>
    <string name="menu_text_health">Salud</string>
    <string name="menu_text_recipes">Recetas</string>
    <string name="menu_text_home">Home</string>
    <string name="menu_text_cooking">Cocinando</string>
    <string name="menu_text_more">Más</string>
    <string name="add_receta">Añadir nueva receta</string>
    <string name="content_description_receta">Imagen de la receta</string>
    <string name="placeholderText_nombreReceta">Nombre de Receta</string>
    <string name="placeholderText_autorReceta">Autor de Receta</string>
    <string name="placeholderText_TiempoPrepReceta">Tiempo de preparacion: %1$s m</string>
    <string name="placeholderText_kcalReceta">Calorias estimadas: %1$s kcal</string>
    <string name="pending">Pendiente</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="nombre_receta_label">Nombre</string>
    <string name="autor_receta_label">Autor</string>
    <string name="categoria_receta_label">Categoria</string>
    <string name="tiempo_receta_label">Tiempo</string>
    <string name="pasos_receta_label">Pasos</string>
    <string name="medida_receta_label">Medida</string>
    <string name="next">Siguiente</string>
    <string name="finish">Terminar</string>
    <string name="menu_text_healthy_lifestyle">Vida Saludable</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="editar_receta">Editar Receta</string>
    <string name="eliminar_receta">Eliminar Receta</string>
    <string name="no">No</string>
    <string name="cancel">Cancelar</string>
    <string name="yes">Si</string>
    <string name="ok">OK</string>
    <string name="delete_recipe_dialog_msg">Desea eliminar esta receta?</string>
    <string name="delete_ingredient_dialog_msg">Desea eliminar este ingrediente?</string>
    <string name="conf_exit_recipe_dialog_msg">Sus ediciones actuales seran guardadas pero la receta permanecera pendiente. Seguro que desea salir? </string>
    <string name="conf_exit_cooking_recipe_dialog_msg">El paso a cocinar se guardara y se reiniciara el tiempo de preparacion transcurrido. Seguro que desea salir? </string>
    <string name="preparation_label">Preparacion:</string>
    <string name="placeholderText_tiempoEst">Tiempo estimado:</string>
    <string name="placeholderText_TiempoComidaReceta">Tiempo de Comida: %s</string>
    <string name="placeholderText_CatReceta">Categoria: %s</string>
    <string name="ingridient_label">Ingredientes:</string>
    <string name="placeholderText_ingrediente">Un ingrediente - cant med</string>
    <string name="placeholder_cant_med">cantidad - medida</string>
    <string name="placeholder_cant_cals">Calorias estimadas</string>
    <string name="edit_details">Editar Detalles</string>
    <string name="agregar_paso">Agregar Paso</string>
    <string name="loremIpsum_small">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam justo erat, finibus quis imperdiet vel, maximus eu dui. Aliquam lacinia nibh nec pretium lacinia. Praesent nisi lacus, aliquam in nibh eget, facilisis consequat ipsum. Etiam ullamcorper metus eget odio elementum vehicula.</string>
    <string name="loremIpsum_medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam justo erat, finibus quis imperdiet vel, maximus eu dui. Aliquam lacinia nibh nec pretium lacinia. Praesent nisi lacus, aliquam in nibh eget, facilisis consequat ipsum. Etiam ullamcorper metus eget odio elementum vehicula. Nam ex tortor, viverra ac fermentum eget, suscipit sit amet libero. Duis at sodales purus. Donec quis eleifend quam. Nam libero purus, rhoncus ut congue eu, tristique ut lorem. </string>
    <string name="loremIpsum_large">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam justo erat, finibus quis imperdiet vel, maximus eu dui. Aliquam lacinia nibh nec pretium lacinia. Praesent nisi lacus, aliquam in nibh eget, facilisis consequat ipsum. Etiam ullamcorper metus eget odio elementum vehicula. Nam ex tortor, viverra ac fermentum eget, suscipit sit amet libero. Duis at sodales purus. Donec quis eleifend quam. Nam libero purus, rhoncus ut congue eu, tristique ut lorem. Pellentesque eu ipsum a justo pharetra ultrices. Aliquam ac nisl quis tortor mollis egestas id vitae nisi. In ornare lacus ac pulvinar aliquet. Vestibulum vitae ornare lacus. Morbi sodales non augue non facilisis. Nunc porta ac nisl non scelerisque. Donec condimentum ipsum a est sodales, vel lobortis felis maximus. In placerat gravida mattis.</string>
    <string name="placeholderText_paso_label">Paso #:</string>
    <string name="placeholderText_paso">Paso</string>
    <string name="save">Guardar</string>
    <string name="delete">Eliminar</string>
    <string name="tiempo_prep_label">Tiempo estimado (min)</string>
    <string name="detalles_paso_label">Detalles</string>
    <string name="ingredient">Ingrediente</string>
    <string name="ingredients">Ingredientes</string>
    <string name="preparation">Preparacion</string>
    <string name="edit_ingredients">Editar Ingredientes</string>
    <string name="add_ingredients">Agregar Ingrediente</string>
    <string name="cant_ingredient">Cantidad</string>
    <string name="ingredient_label">Ingrediente</string>
    <string name="medida_ingredient_label">Medida</string>
    <string name="cant_calorias">Calorias totales</string>
    <string name="time_day_label">Buen@s XXXXX,</string>
    <string name="wayouwant_label">Que Le Apetece Hoy?</string>
    <string name="perfect_time_label">Perfectos Para la Hora</string>
    <string name="start_cooking">Empezar a Cocinar</string>
    <string name="cook_recipe_dialog_msg">Desea comenzar a cocinar esta receta?</string>
    <string name="good_morning_label">Buenos Dias,</string>
    <string name="good_afternoon_label">Buenas Tardes,</string>
    <string name="good_evening_label">Buenas Noches,</string>
    <string name="your_recipes_label">Tus Recetas</string>
    <string name="placeholder_time">XX:XX:XX</string>
    <string name="order_ingredients_label">Ordena tus ingredientes!</string>
    <string name="next_step">Siguiente Paso</string>
    <string name="start_step">Comenzar Paso</string>
    <string name="finished_recipe_label">Receta Terminada!</string>
</resources>