<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pasos_details_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:id="@+id/tvPasoNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholderText_paso"
                android:textAppearance="?attr/textAppearanceTitleLarge" />

            <TextView
                android:id="@+id/tvTiempoPrepPaso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/placeholderText_tiempoEst"
                android:textAppearance="?attr/textAppearanceTitleSmall" />

            <!-- Detalles del Paso -->
            <TextView
                android:id="@+id/tvDetallesPaso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                tools:text="@string/loremIpsum_small"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?android:attr/textColorSecondary" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>