<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.main.recipe.EditIngredientsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/topAppBar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:menu="@menu/top_app_bar_trash_save"
                    app:navigationIcon="@drawable/ic_baseline_close_24"
                    app:title="@string/ingredient" />

            </com.google.android.material.appbar.AppBarLayout>

            <LinearLayout
                android:id="@+id/InfoContainerLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:divider="@drawable/divider"
                android:orientation="vertical"
                android:showDividers="middle"
                app:layout_constraintVertical_bias="0">

                <!--Combo Input para Ingrediente-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tflIngrediente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ingredient_label"
                    app:counterEnabled="true"
                    app:counterMaxLength="45"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tfIngrediente"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!--Text Input para Cantidad del Ingrediente-->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tflCantidadIngrediente"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:hint="@string/cant_ingredient">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tfCantidadIngrediente"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionDone"
                            android:inputType="number"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!--Combo Input para medida de receta-->
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/medida_ingredient_label">

                        <AutoCompleteTextView
                            android:id="@+id/tfMedidaIngrediente"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            app:simpleItems="@array/medidas_ingredientes"
                            tools:ignore="LabelFor" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <!--Text Input para las Calorias del Ingrediente-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tflCalorias"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cant_calorias">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tfCalorias"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>