<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.main.recipe.EditStepDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/topAppBar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:menu="@menu/top_app_bar_save"
                    app:navigationIcon="@drawable/ic_baseline_close_24"
                    app:title="@string/placeholderText_paso" />

            </com.google.android.material.appbar.AppBarLayout>

            <LinearLayout
                android:id="@+id/InfoContainerLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:divider="@drawable/divider"
                android:orientation="vertical"
                android:showDividers="middle"
                app:layout_constraintVertical_bias="0">

                <!--Image View para imagen de receta-->
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/ivFotoRecetaHolder"
                    android:layout_width="match_parent"
                    android:layout_height="140dp">

                    <ImageView
                        android:id="@+id/ivFotoReceta"
                        android:layout_width="match_parent"
                        android:layout_height="140dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/placeholder" />

                </com.google.android.material.card.MaterialCardView>

                <!--Text Input para Tiempo de preparacion-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tiempo_prep_label">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tfTiempoPrepPaso"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--Text Input los detalles del paso-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/detalles_paso_label">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tfAutorReceta"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="10"
                        app:endIconMode="clear_text" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>